# calculate_engine_compose

./: .bazelproject  .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE.bazel  build.gradle.kts  gradle.properties  settings.gradle.kts
.fleet/: receipt.json
.github/: SECURITY.md  dependabot.yml
.github/workflows/: android.yml
android/: BUILD.bazel  build.gradle.kts
android/src/androidMain/kotlin/dev/hyaena_technologies/calculate_engine/: MainActivity.kt
android/src/main/kotlin/dev/hyaena_technologies/calculate_engine/android/: MainActivity.kt
android/src/res/values-night/: styles.xml
app/: BUILD.bazel  build.gradle.kts
app/src/androidTest/java/dev/hyaena_technologies/calculate_engine/: ExampleInstrumentedTest.kt
app/src/main/java/dev/: MainActivity.kt
app/src/main/java/dev/hyaena_technologies/calculate_engine/: MainActivity.kt
app/src/main/java/dev/hyaena_technologies/calculate_engine/widgets/: HomeRoute.kt  HomeRouteBottomBar.kt  HomeRouteTopBar.kt
app/src/main/java/dev/widgets/: HomeRouteDrawer.kt  HomeRouteTopBar.kt
app/src/main/kotlin/dev/hyaena_technologies/calculate_engine/: MainActivity.kt
app/src/main/kotlin/dev/hyaena_technologies/calculate_engine/android/: MainActivity.kt
app/src/main/kotlin/dev/hyaena_technologies/calculate_engine/android/widgets/: HomeRoute.kt
app/src/main/kotlin/dev/hyaena_technologies/calculate_engine/theme/: Color.kt  Theme.kt
app/src/main/kotlin/dev/hyaena_technologies/calculate_engine/widgets/: HomeRoute.kt  HomeRouteBottomBar.kt  HomeRouteDrawer.kt  HomeRouteTopBar.kt
app/src/main/res/values/: styles.xml
app/src/test/java/dev/hyaena_technologies/calculate_engine/: ExampleUnitTest.kt
common/: build.gradle.kts
common/src/androidMain/: AndroidManifest.xml
common/src/androidMain/kotlin/dev/hyaena_technologies/: MainActivity.kt
common/src/commonMain/kotlin/: App.kt
common/src/commonMain/kotlin/theme/: Color.kt  Theme.kt
common/src/commonMain/kotlin/widgets/: HomeRoute.kt  HomeRouteBottomBar.kt  HomeRouteDrawer.kt  HomeRouteTopBar.kt
common/src/desktopMain/kotlin/: main.kt
composeApp/: build.gradle.kts
composeApp/src/androidMain/res/mipmap-anydpi-v26/: hce_res_round.xml
composeApp/src/commonMain/test/: widget_test.dart
desktop/: BUILD.bazel  build.gradle.kts
desktop/src/: BUILD.bazel
desktop/src/desktopMain/kotlin/: main.kt
desktop/src/kotlin/: main.kt
desktop/src/main/: BUILD.bazel
desktop/src/main/kotlin/dev/hyaena_technologies/calculate_engine/desktop/: main.kt
gradle/wrapper/: gradle-wrapper.properties
ios/: BUILD.bazel  build.gradle.kts
ios/app/Configuration/: Config.xcconfig
ios/iosApp/Configuration/: Config.xcconfig
ios/src/iosMain/kotlin/: MainViewController.kt
ios/src/main/kotlin/dev/hyaena_technologies/calculate_engine/ios/: MainViewController.kt
jetpackCompose/: BUILD.bazel  build.gradle.kts
jetpackCompose/src/main/kotlin/dev/hyaena_technologies/calculate_engine/widgets/: HomeRoute.kt
jetpackCompose/src/main/res/mipmap-anydpi-v26/: hce_res.xml
jetpackCompose/src/test/: BUILD.bazel
lib/: BUILD.bazel  build.gradle.kts
lib/src/commonMain/kotlin/: App.kt
lib/src/commonMain/kotlin/theme/: Color.kt  Theme.kt
lib/src/commonMain/kotlin/widgets/: HomeRoute.kt  HomeRouteBottomBar.kt  HomeRouteDrawer.kt  HomeRouteTopBar.kt
lib/src/kotlin/: Main.kt
lib/src/kotlin/widgets/: HomeRouteDrawer.kt  HomeRouteTopBar.kt
lib/src/main/kotlin/dev/hyaena_technologies/calculate_engine/lib/: Main.kt
lib/src/main/kotlin/dev/hyaena_technologies/calculate_engine/lib/theme/: Color.kt  Theme.kt
lib/src/main/kotlin/dev/hyaena_technologies/calculate_engine/lib/widgets/: HomeRoute.kt  HomeRouteBottomBar.kt  HomeRouteDrawer.kt  HomeRouteTopBar.kt
server/: build.gradle.kts
server/src/main/kotlin/dev/hyaena_technologies/: Application.kt
shared/: build.gradle.kts
test/: BUILD.bazel  build.gradle.kts
web/: BUILD.bazel  build.gradle.kts
web/src/jsMain/kotlin/: main.kt
web/src/kotlin/: main.kt
web/src/main/kotlin/dev/hyaena_technologies/calculate_engine/web/: main.kt
web/src/main/resources/: index.html
