load(
    "@rules_kotlin//kotlin:core.bzl",
    "define_kt_toolchain",
    "kt_compiler_plugin",
)

define_kt_toolchain(
    name = "kotlin_toolchain",
    api_version = "1.9",
    jvm_target = "17",
    language_version = "1.9",
)

kt_compiler_plugin(
    name = "compose_plugin",
    id = "androidx.compose.compiler",
    target_embedded_compiler = True,
    deps = ["@maven//:androidx_compose_compiler_compiler"],
)

platform(
    name = "android_arm64",
    constraint_values = [
        "@platforms//cpu:arm64",
        "@platforms//os:android",
    ],
)
