workspace(name = "calculate_engine_workspace")

load(
    "@rules_android//android:rules.bzl",
    "android_ndk_repository",
    "android_sdk_repository",
)
load(
    "@rules_kotlin//kotlin:repositories.bzl",
    "kotlin_repositories",
    "kotlinc_version",
)

android_ndk_repository(
    name = "android_ndk",
    api_level = 34,
    path = "../../Android/Sdk/ndk/26.2.11394342",
)

android_sdk_repository(
    name = "androidsdk",
    api_level = 34,
    build_tools_version = "34.0.0",
    path = "../../Android/Sdk",
)

kotlin_repositories(
    compiler_release = kotlinc_version(
        release = "1.9.22",
        sha256 = "88b39213506532c816ff56348c07bbeefe0c8d18943bffbad11063cf97cac3e6",
    ),
)

register_toolchains("//:kotlin_toolchain")
