load(
    "@io_bazel_rules_kotlin//kotlin:android.bzl",
    "kt_android_library",
)
load(
    "@rules_android//android:rules.bzl",
    "android_binary",
)

android_binary(
    name = "calculate_engine_apk",
    srcs = [
        "src/main/kotlin/*.kt",
        "src/main/kotlin/**/*.kt",
    ],
    assets = glob([
        "src/main/assets/**/*",
    ]),
    assets_dir = "src/main/assets",
    custom_package = "dev.hyaena_technologies.calculate_engine.android",
    manifest = "src/main/AndroidManifest.xml",
    plugins = ["//:compose_plugin"],
    resource_files = glob([
        "src/main/res/**/*",
        "lib/src/main/resources/**/*",
    ]),
    deps = [
        ":calculate_engine_lib",
    ],
)

kt_android_library(
    name = "calculate_engine_android",
    srcs = [
        "src/main/kotlin/*.kt",
        "src/main/kotlin/**/*.kt",
    ],
    assets = glob([
        "src/main/assets/**/*",
    ]),
    assets_dir = "src/main/assets",
    custom_package = "dev.hyaena_technologies.calculate_engine.android",
    manifest = "src/main/AndroidManifest.xml",
    plugins = ["//:compose_plugin"],
    resource_files = glob([
        "src/main/res/**/*",
        "lib/src/main/resources/**/*",
    ]),
    deps = [
        ":calculate_engine_lib",
    ],
)
