load(
    "@io_bazel_rules_kotlin//kotlin:android.bzl",
    "kt_android_library",
)
load(
    "@rules_kotlin//kotlin:jvm.bzl",
    "kt_jvm_binary",
)

kt_jvm_binary(
    name = "calculate_engine_jvm",
    srcs = [
        "src/main/kotlin/*.kt",
        "src/main/kotlin/**/*.kt",
    ],
    main_class = "main",
    plugins = ["//:compose_plugin"],
    resources = glob([
        "lib/src/main/resources/**/*",
    ]),
    deps = [
        ":calculate_engine_lib",
    ],
)

kt_android_library(
    name = "calculate_engine_desktop",
    srcs = [
        "src/main/kotlin/*.kt",
        "src/main/kotlin/**/*.kt",
    ],
    custom_package = "dev.hyaena_technologies.calculate_engine.desktop",
    plugins = ["//:compose_plugin"],
    resource_files = glob([
        "lib/src/main/resources/**/*",
    ]),
    deps = [
        ":calculate_engine_lib",
    ],
)
