load(
    "@build_bazel_rules_apple//apple:ios.bzl", 
    "ios_application",
)
load(
    "@io_bazel_rules_kotlin//kotlin:android.bzl", 
    "kt_android_library",
)

ios_application(
    app_icons = "iosApp/iosApp/Assets.xcassets/AppIcon.appiconset/**",
    bundle_id = "dev.hyaena_technologies.CalculateEngine",
    bundle_name = "CalculateEngine",
    executable_name = "CalculateEngine",
    families = [
        "iphone",
        "ipad",
    ],
    infoplists = ["iosApp/iosApp/Info.plist"],
    name = "calculate_engine_ipa",
    minimum_deployment_os_version = "17.0",
    minimum_os_version = "17.0",
    visibility = ["//visibility:public"],
)

kt_android_library(
    custom_package = "dev.hyaena_technologies.calculate_engine.ios",
    deps = [
    ":calculate_engine_lib",
    ],
    name = "calculate_engine_ios",
    plugins = ["//:compose_plugin"],
    resource_files = glob([
        "lib/src/main/resources/**/*"
    ]),
    srcs = [
        "src/main/kotlin/*.kt",
        "src/main/kotlin/**/*.kt",
    ],
)