load(
    "@build_bazel_rules_apple//apple:ios.bzl",
    "ios_application",
)
load(
    "@io_bazel_rules_kotlin//kotlin:android.bzl",
    "kt_android_library",
)

ios_application(
    name = "calculate_engine_ipa",
    app_icons = "iosApp/iosApp/Assets.xcassets/AppIcon.appiconset/**",
    bundle_id = "dev.hyaena_technologies.CalculateEngine",
    bundle_name = "CalculateEngine",
    executable_name = "CalculateEngine",
    families = [
        "iphone",
        "ipad",
    ],
    infoplists = ["iosApp/iosApp/Info.plist"],
    minimum_deployment_os_version = "17.0",
    minimum_os_version = "17.0",
    visibility = ["//visibility:public"],
)

kt_android_library(
    name = "calculate_engine_ios",
    srcs = [
        "src/main/kotlin/**",
    ],
    plugins = ["//:compose_plugin"],
    resource_files = glob([
        "lib/src/main/resources/**",
    ]),
    deps = [
        ":calculate_engine_lib",
    ],
)
