load(
    "@io_bazel_rules_kotlin//kotlin:android.bzl",
    "kt_android_library",
)

kt_android_library(
    name = "calculate_engine_test",
    srcs = [
        "src/main/kotlin/**",
    ],
    plugins = ["//:compose_plugin"],
    resource_files = glob([
        "lib/src/main/resources/**",
    ]),
    deps = [
        ":calculate_engine_lib",
    ],
)
