load(
    "@rules_kotlin//kotlin:android.bzl",
    "kt_android_local_test",
)

kt_android_local_test(
    name = "calculate_engine_test_multiplatform",
    srcs = [
        "src/commonTest/kotlin/**",
    ],
    plugins = [":compose_plugin"],
    resource_files = glob([
        "src/commonTest/resources/**",
    ]),
    deps = [
        "//lib:calculate_engine_lib_multiplatform",
    ],
)
