load(
    "@build_bazel_rules_nodejs//:index.bzl",
    "nodejs_binary",
)
load(
    "@io_bazel_rules_kotlin//kotlin:android.bzl",
    "kt_android_library",
)

nodejs_binary(
    name = "calculate_engine_nodejs",
    data = [":calculate_engine_web"],
    entry_point = ":main.js",
    visibility = ["//visibility:public"],
)

kt_android_library(
    name = "calculate_engine_web",
    srcs = [
        "src/main/kotlin/**",
    ],
    plugins = ["//:compose_plugin"],
    resource_files = glob([
        "lib/src/main/resources/**",
    ]),
    deps = [
        ":calculate_engine_lib",
    ],
)
