load(
    "@rules_kotlin//kotlin:android.bzl",
    "kt_android_local_test",
)

kt_android_local_test(
    name = "calculate_engine_android_test",
    srcs = [
        "src/test/kotlin/**",
    ],
    assets = glob([
        "src/main/assets/**",
    ]),
    assets_dir = "src/main/assets",
    manifest = "src/main/AndroidManifest.xml",
    plugins = [":compose_plugin"],
    resource_files = glob([
        "src/main/res/**",
    ]),
    deps = [
        "//jetpackCompose:calculate_engine_android",
    ],
)
